# host-snapshot-agent-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.ps1
hsnap/: Cargo.toml
hsnap-purl-plugin/: Cargo.toml
hsnap-purl-plugin/src/: lib.rs
hsnap-purl-plugin/src/plugins/: debian.rs  mod.rs  rhel.rs  windows.rs
hsnap/.cargo/: config.toml
hsnap/src/: main.rs
