[package]
name = "hsnap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# System Information
sysinfo = "0.38"

# To be able serialize data into json
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# To be able to send data to a server
# Using rustls-tls is essential for static linking (musl/alpine targets)
# removing default-features avoids dynamically linking system OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Cryptography
rsa = { version = "0.9", features = ["serde"] }
sha2 = "0.10"
hex = "0.4.3"

# Plugins
hsnap-purl-plugin = { path = "../hsnap-purl-plugin" }
packageurl = { version = "0.5.0", features = ["serde"] }
